# FileVault

./: .gitignore  CMakeLists.txt  README.md
.run/: FileVault Container.run.xml
CppCryptoLib/: CMakeLists.txt
CppCryptoLib/src/: CryptoNamespace.cpp  CryptoNamespace.h
CppCryptoLib/src/alogs/: AES128.cpp  AES256.cpp  KeyGen.cpp  SHA256.cpp
CppDirectoryScanner/: CMakeLists.txt
CppFileVaultMain/: CMakeLists.txt
CppFileVaultMain/src/: GlobalDefinitions.cpp  GlobalDefinitions.h  main.cpp
CppFileVaultMain/src/DLLUtils/: DLLUtils.cpp  DLLUtils.h
CppFileVaultMain/src/FileScanner/: FileUtils.cpp  FileUtils.h
CppFileVaultMain/src/HelperUtils/: HelperUtils.cpp
CppFileVaultMain/src/StructUtils/: StructUtils.cpp  StructUtils.h
CppSaveFileLib/: CMakeLists.txt  FileData.h  SaveFileOperations.cpp  SaveFileOperations.h
CppSaveFileLib/src/: ConvertFunctions.cpp  ExternFunctions.cpp  FileUtils.cpp  SaveFileOperations.cpp  SaveFileOperations.h
Cpp_Cryptography/: CMakeLists.txt
Cpp_Cryptography/src/: CryptoNamespace.cpp  CryptoNamespace.h
Cpp_Cryptography/src/alogs/: AES128.cpp  AES256.cpp  KeyGen.cpp
Cpp_Gui/: CMakeLists.txt
Cpp_Gui/include/: global.h
Cpp_Gui/src/: main.cpp
Cpp_Gui/src/FileScanner/: FileUtils.cpp  FileUtils.h
Cpp_Gui/src/System/: SystemUtils.h
Cpp_Gui/src/gui/: MainWindow.cpp  functions.cpp
Cpp_Gui/src/logic/: decryptor.cpp  decryptor.h  encryptor.cpp
CryptoApp/src/: CMakeLists.txt
CryptoApp/src/CppCryptoLib/: CMakeLists.txt
CryptoApp/src/CppCryptoLib/src/: CryptoNamespace.cpp  CryptoNamespace.h  HelperUtils.cpp
CryptoApp/src/CppCryptoLib/src/Helper/: CryptoHelperUtils.cpp  CryptoHelperUtils.h  HelperUtils.cpp  HelperUtils.h
CryptoApp/src/CppCryptoLib/src/alogs/: AES128.cpp  AES128.h  AES256.cpp  AES256.h  BLAKE2.cpp  BLAKE2.h  KeyGen.cpp  KeyGen.h  SHA512.cpp  SHA512.h
CryptoApp/src/CppCryptoLib/src/api/: CryptoAPI.cpp  CryptoAPI.h
CryptoApp/src/CppDirectoryScanner/: CMakeLists.txt
CryptoApp/src/CppDirectoryScanner/src/: DirectoryScanner.cpp  DirectoryScanner.h
CryptoApp/src/CppFileMarkLib/: CMakeLists.txt
CryptoApp/src/CppFileMarkLib/src/: FileMark.cpp  FileMark.h
CryptoApp/src/CppFileVaultMain/: CMakeLists.txt
CryptoApp/src/CppFileVaultMain/res/: resources.qrc
CryptoApp/src/CppFileVaultMain/src/: GlobalDefinitions.cpp  GlobalDefinitions.h  main.cpp
CryptoApp/src/CppFileVaultMain/src/AttributeUtils/: AttributeUtils.cpp  AttributeUtils.h
CryptoApp/src/CppFileVaultMain/src/BackendTester/: BackendTester.cpp  BackendTester.h
CryptoApp/src/CppFileVaultMain/src/DLLUtils/: CryptoDLL.cpp  CryptoDLL.h  FileMarkDLL.cpp  FileMarkDLL.h  FileScannerDLL.cpp  FileScannerDLL.h  MasterDLLClass.h  MultiCryptoDLL.cpp  MultiCryptoDLL.h  RestApiDLL.cpp  RestApiDLL.h
CryptoApp/src/CppFileVaultMain/src/DLLUtils/RestAPI/: RestApiDLL.cpp  RestApiDLL.h  converter.cpp
CryptoApp/src/CppFileVaultMain/src/HelperUtils/: HelperUtils.cpp  HelperUtils.h
CryptoApp/src/CppFileVaultMain/src/StructUtils/: StructUtils.cpp  StructUtils.h
CryptoApp/src/CppFileVaultMain/src/System/: SystemUtils.cpp  SystemUtils.h
CryptoApp/src/CppFileVaultMain/src/gui/: FileVaultGui.cpp  FileVaultGui.h  MainWindow.h  PasswordDialog.cpp  PasswordDialog.h  ui.cpp
CryptoApp/src/CppFileVaultMain/src/gui/styleClass/: StyleSetter.cpp  StyleSetter.h  StyleSetter.tpp
CryptoApp/src/CppFileVaultMain/src/gui/widgetClasses/Screens/: DecryptionScreenWidget.cpp  DecryptionScreenWidget.h  EncryptionScreenWidget.cpp  EncryptionScreenWidget.h  SettingsScreenWidget.cpp  SettingsScreenWidget.h  StatisticsScreenWidget.cpp  StatisticsScreenWidget.h
CryptoApp/src/CppFileVaultMain/src/gui/widgetClasses/elementWidgets/MasterClasses/: FilePicker.cpp  FilePicker.h
CryptoApp/src/CppFileVaultMain/src/gui/widgetClasses/elementWidgets/SettingsMenu/: CentralFileStorageWidget.cpp  CentralFileStorageWidget.h  DatabaseManagementWidget.cpp  DatabaseManagementWidget.h  FileDeletionWidget.cpp  FileDeletionWidget.h  LanguageSelectionWidget.cpp  LanguageSelectionWidget.h  LogsLocationWidget.cpp  LogsLocationWidget.h  MasterSettingsWidget.cpp  MasterSettingsWidget.h  NewPasswordWidget.cpp  NewPasswordWidget.h  StandardAlgorithmWidget.cpp  StandardAlgorithmWidget.h
CryptoApp/src/CppFileVaultMain/src/gui/widgetClasses/elementWidgets/SettingsWidgets/: CentralFileStorageWidget.cpp  CentralFileStorageWidget.h  DatabaseManagementWidget.cpp  DatabaseManagementWidget.h  FileDeletionWidget.cpp  FileDeletionWidget.h  LanguageSelectionWidget.cpp  LanguageSelectionWidget.h  LogsLocationWidget.cpp  LogsLocationWidget.h  MasterSettingsWidget.cpp  MasterSettingsWidget.h  NewPasswordWidget.cpp  NewPasswordWidget.h  StandardAlgorithmWidget.cpp  StandardAlgorithmWidget.h
CryptoApp/src/CppFileVaultMain/src/gui/widgetClasses/elementWidgets/cryptionWidgets/: FilePicker.cpp  FilePicker.h
CryptoApp/src/CppFileVaultMain/src/gui/widgetClasses/elementWidgets/smallElements/: DecryptionLine.cpp  DecryptionLine.h  EncryptionLine.cpp  EncryptionLine.h  FilePicker.cpp  FilePicker.h  LoadingWindow.cpp  LoadingWindow.h  PasswordLineEdit.h
CryptoApp/src/CppFileVaultMain/src/gui/widgetClasses/elementWidgets/statisticWidgets/: AlgorithmStatisticWidget.cpp  AlgorithmStatisticWidget.h  CakeDiagram.cpp  CakeDiagram.h
CryptoApp/src/GoMultiThreadCryptoLib/: main.go
CryptoApp/src/GoRestApiWrapperLib/: c_api.go  converter.go  filedata.h  filedataDB.h  go.mod  http_request.go  types.go
CryptoApp/src/shared/: CMakeLists.txt  FileData.cpp  FileData.h  Threadpool.cpp  Threadpool.h
CryptoApp/src/shared/settingsClasses/: CentralFileStorage.h  Logs.cpp  Logs.h
CryptoApp/src/shared/src/: FileData.cpp  FileData.h  GlobalDefinitions.cpp  GlobalDefinitions.h
CryptoApp/src/shared/src/settingsClasses/: CentralFileStorage.cpp  CentralFileStorage.h  GetSettingsData.cpp  GetSettingsData.h  Logs.cpp  Logs.h
CsFileScannerLib/: CsFileScannerLib.sln
GoMultiThreadCryptoLib/: go.mod  main.go
Go_Multithreading/: command.txt  main.go
JavaDatabase/: Dockerfile  filedata.db  pom.xml
RustFileCopy/: Cargo.toml
docs/: Doxyfile  (+2 more)
(+912 files in other folders)
